--- a/Projeto Gioia/App.config
+++ b/Projeto Gioia/App.config
@@ -13,7 +13,7 @@
   </runtime>
 
 	<connectionStrings>
-		<add name="bdgioia" connectionString="server=localhost; user ID=root; password=mario4554jr7; database=bdgioia"
+		<add name="yourDataBase" connectionString="server=yourServerHost; user ID=yourIdUser; password=yourPassword; database=yourDataBase"
 			 providerName="MySql.Data.MySqlCliente;"/>
 	</connectionStrings>
 	
